objects/Engage_Scoping_And_Engage_Standard__c.object
<CustomObject>
    <fields>
        <fullName>Two_Year_Pharmacy_Group_Numbers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>FOR ANTHEM RX ONLY
Provide group numbers for this client that should be used to obtain/provide. Separate Group numbers with commas.</inlineHelpText>
        <label>2 Year Pharmacy Group Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebMD_HRA_Program__c</fullName>
        <inlineHelpText>Incentivized program w/ 500 points per annual completion.</inlineHelpText>
        <label>WebMD HRA Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>When_Does_Plan_Year_Start__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>When Does Plan Year Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>When_Is_Open_Enrollment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>When Is Open Enrollment</label>
        <type>Date</type>
    </fields>
    <label>Engage Scoping And Engage Standard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Engage_Scoping1</fullName>
        <columns>NAME</columns>
        <columns>Elite__c</columns>
        <columns>Elite_Plus__c</columns>
        <columns>Essentials_Plus__c</columns>
        <columns>Essentials__c</columns>
        <columns>Essentials_non_Anthem__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Engage_Scoping_And_Engage_Standard__c.Engage_Scoping</value>
        </filters>
        <label>Engage Scoping</label>
    </listViews>
    <listViews>
        <fullName>Engage_Standard1</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Engage_Scoping_And_Engage_Standard__c.Engage_Standard</value>
        </filters>
        <label>Engage Standard</label>
    </listViews>
    <nameField>
        <displayFormat>ENGS-{000}</displayFormat>
        <label>Engage Scoping And Engage Standard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engage Scoping And Engage Standard</pluralLabel>
    <recordTypes>
        <fullName>Engage_Scoping</fullName>
        <active>true</active>
        <label>Engage Scoping</label>
    </recordTypes>
    <recordTypes>
        <fullName>Engage_Standard</fullName>
        <active>true</active>
        <label>Engage Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>